# horizonOS

./: .gitignore  .gitmodules  CMAKE_BUILD.md  CMAKE_QUICK.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  TODO  build.sh  compile_commands.json  default-host.sh  events  iso.sh  iso_backup.sh  iso_old.sh  limine.conf  notes  ps2  qemu.sh  target-triplet-to-arch.sh
cmake/: copy_limine_files.cmake  create_grub_cfg.cmake
docs/: .gitignore  build-docs.sh  conf.py  index.md  requirements.txt
fonts/: bmfont2c.cfg  bmfont2c.py  fontlibrary.c  run.sh
fs/fat/: fat.h
isodir-i386/boot/: horizon.kernel
isodir-i386/boot/grub/: grub.cfg
kernel/: CMakeLists.txt  Makefile  horizon.kernel.dis  horizon.kernel.elf  horizon.kernel.sym
kernel/arch/i386/: apic.asm  apic.c  apic.h  descriptor_tables.c  gdt.S  interrupt.asm  isr.c  isr.h  kernel.c  linker.ld  make.config  multiboot_info.h  paging.h  panic.c  panic.h  pic.h  stack_protector.c  tty.c
kernel/arch/i386/apic/: apic.c  apic.h  apic_asm.asm  madt.c  madt.h  rsdp.c  rsdp.h
kernel/arch/i386/boot/: boot.S
kernel/arch/i386/common/: common.c  ctype.c  ctype.h  halt.c  halt.h  io.h  logger.c  logger.h  rand.c
kernel/arch/i386/drivers/: bios.c  bios.h  graphics.c  serial.c  serial.h  timer.c  timer.h  tty.c
kernel/arch/i386/drivers/graphics/: vbe.c  vbe.h
kernel/arch/i386/drivers/keyboard/: keyboard.c  keyboard.h
kernel/arch/i386/drivers/shell/: hush.c  hush.h
kernel/arch/i386/drivers/shell/builtins/: maze.c  maze.h  maze_eller.c
kernel/arch/i386/gdt/: descriptor_tables.c  descriptor_tables.h
kernel/arch/i386/include/: apic.h
kernel/arch/i386/interrupts/: apic.c  apic.h  common.c  descriptor_tables.c  descriptor_tables.h  interrupt.asm  isr.c  isr.h
kernel/arch/i386/memory/: paging.c  paging.h
kernel/arch/x86_64/: kernel.c  linker.ld  make.config  panic.c
kernel/arch/x86_64/acpi/: acpi_bus.c  acpi_bus.h  acpi_driver.h
kernel/arch/x86_64/acpi/drivers/: keyboard.c  keyboard.h
kernel/arch/x86_64/asm/: apic_asm.S  apic_asm.asm  interrupt.S  interrupt.asm
kernel/arch/x86_64/boot/: boot.S  crti.S  crtn.S
kernel/arch/x86_64/common/: logger.c
kernel/arch/x86_64/drivers/: ac97.h  console.c  console.h  font.c  font.h  graphics.c  graphics.h  ps2k.c  ps2k.h  serial.c  serial.h  tty.c
kernel/arch/x86_64/games/: pong.c  pong.h
kernel/arch/x86_64/include/: apic.h  common.h  keyboard.c  keyboard.h  log.c  log.h  shell.c  shell.h
kernel/arch/x86_64/interrupts/: apic.c  common.c  descriptor_tables.c  descriptor_tables.h  gdt.S  isr.c  isr.h  stack_protector.c
kernel/arch/x86_64/memory/: kmalloc_wrapper.h  paging.c  paging.h
kernel/arch/x86_64/uacpi/: kernel_api.c  kernel_api.h  uacpi_config.h  uacpi_init.c  uacpi_init.h
kernel/include/kernel/: common.h  logger.h  panic.h  rand.h  tty.h  types.h
kernel/kernel/: halt.c  halt.h  kernel.c  kheap.c  kheap.h  mm.c  mm.h
kernel/kernel/apic/: apic.c  apic.h  madt.c  madt.h  rsdp.c  rsdp.h
kernel/kernel/common/: logger.c
kernel/kernel/drivers/: ac97.c  ac97.h  console.c  console.h  font.c  font.h  graphics.c  graphics.h  pci.c  pci.h  serial.c  serial.h  timer.c  timer.h
kernel/kernel/drivers/keyboard/: keyboard.c  keyboard.h
kernel/kernel/fonts/: fontlibrary.c  fontlibrary.h
kernel/kernel/games/: pong.c  pong.h
kernel/kernel/jury/: test_paging.c  test_vm.c  test_vm.h
kernel/kernel/jury/i386/: test_paging.h
libc/: CMakeLists.txt  Makefile  rand.c
libc/arch/x86_64/: make.config
libc/include/: limits.h  math.h  rand.h  string.h
libc/include/sys/: cdefs.h
libc/math/: math.c
libc/stdio/: .printf.c.swm  printf.c  putchar.c
libc/string/: itoa.c  string.c  string.h
